chore: adds some i18n replacements

--- a/client/src/i18n/resources/en.json
+++ b/client/src/i18n/resources/en.json
@@ -39,6 +39,7 @@
     "measurements": {
       "measurements": "Measurements",
       "thisBlock": "This block",
+      "lastBlock": "Last block",
       "details": "Details",
       "weight": "Weight",
       "mean": "Mean",
