feat(language selector): enables language change

--- a/client/src/i18n/resources/en.json
+++ b/client/src/i18n/resources/en.json
@@ -33,7 +33,8 @@
       "references": "References",
       "statistics": "Statistics",
       "users": "Users",
-      "profile": "Profile"
+      "profile": "Profile",
+      "settings": "Settings"
     },
 
     "measurements": {
