--- a/client/src/i18n/resources/es.json
+++ b/client/src/i18n/resources/es.json
@@ -33,7 +33,8 @@
       "references": "Referencias",
       "statistics": "Estadísticas",
       "users": "Usuarios",
-      "profile": "Perfil"
+      "profile": "Perfil",
+      "settings": "Configuración"
     },
 
     "measurements": {
