--- a/client/src/i18n/resources/es.json
+++ b/client/src/i18n/resources/es.json
@@ -3,7 +3,9 @@
     "actions": {
       "cancel": "Cancelar",
       "add": "Agregar",
-      "update": "Actualizar"
+      "update": "Actualizar",
+      "clear": "Despejar",
+      "create": "Crear"
     },
 
     "common": {
@@ -24,7 +26,8 @@
     "meals": {
       "clean": "Limpiar",
       "deleteMeal": "Eliminar Comida",
-      "total": "Total"
+      "total": "Total",
+      "addToMeal": "Agregar a la comida"
     },
 
     "sidebar": {
@@ -107,6 +110,20 @@
       "language": "Idioma",
       "english": "Inglés",
       "spanish": "Español"
+    },
+
+    "mealView": {
+      "numeric": "Numérico",
+      "percent": "Porcentaje"
+    },
+
+    "dialog": {
+      "addMeasurement": "Agregar medida",
+      "addFoodToMealResume": "Ingresa alimentos para ver un resumen de tus comidas",
+      "upgradePremium": "Actualiza a premium para ver el resumen de tus comidas",
+      "noFoodInMeal": "No hay alimentos en esta comida",
+      "dropHereToCreateMeal": "Arrastra aquí para crear una vista previa de la comida",
+      "noMeasureAvailable": "No hay medidas disponibles"
     }
   }
 }
