chore: changes a word

--- a/client/src/i18n/resources/es.json
+++ b/client/src/i18n/resources/es.json
@@ -89,13 +89,13 @@
       "height": "Altura",
       "macronutrientInformation": "Información de macronutrientes",
       "baseWeight": "Peso base",
-      "offsetMode": "Modo de desviación",
+      "offsetMode": "Compensación",
       "deficit": "Déficit",
       "maintenance": "Mantenimiento",
       "surplus": "Superávit",
       "offset": "Desviación es la diferencia entre tus calorías de mantenimiento y tu objetivo diario de calorías. Para perder peso, recomendamos establecer un objetivo diario de calorías entre 200 y 700 calorías por debajo de tu nivel de mantenimiento. Para ganar músculo, recomendamos un objetivo entre 250 y 450 calorías por encima de tu nivel de mantenimiento. Ten en cuenta que estas son pautas generales, y tu objetivo ideal de calorías puede variar según tu cuerpo y metas únicas. Te animamos a experimentar y ajustar tu objetivo según tu progreso y cómo te sientas.",
       "activity": "Actividad",
-      "moderatelyActive": "Moderadamente Activo: 3-5 días de ejercicio moderado",
+      "moderatelyActive": "Moderadamente activo: 3-5 días de ejercicio moderado",
       "proteinPreference": "{{grams}} g por lb de peso base",
       "proteinPreferenceDescription": "Si te gustan los alimentos ricos en proteínas, puedes elegir establecer un objetivo de proteínas más alto. Aumentar tu ingesta de proteínas disminuirá naturalmente tu ingesta de carbohidratos.",
       "fatPreference": "Preferencia de grasa",
