chore: fixes some i18n entries

--- a/client/src/i18n/resources/en.json
+++ b/client/src/i18n/resources/en.json
@@ -156,7 +156,7 @@
       "accessibility": "Accessibility",
       "language": "Language",
       "english": "English",
-      "spanish": "Spanish",
+      "spanish": "Español",
       "chooseLanguage": "Choose a language"
     },
 
