feat: m3 graphic revamp

--- a/client/src/i18n/resources/en.json
+++ b/client/src/i18n/resources/en.json
@@ -50,7 +50,7 @@
 
     "sidebar": {
       "day": "Day",
-      "measurements": "Measurements",
+      "measurements": "Measures",
       "references": "References",
       "statistics": "Statistics",
       "users": "Users",
